@@ -47,6 +47,7 @@ public class ImageProcessor {
 	private final HashMap<String, Rect> crcs = new HashMap();
 	private final Array<Rect> rects = new Array();
 	private float scale = 1;
+	private TexturePacker.InterpolationMode interpolationMode = TexturePacker.InterpolationMode.Bicubic;
 
 	/** @param rootDir Used to strip the root directory prefix from image file names, can be null. */
 	public ImageProcessor (File rootDir, Settings settings) {
@@ -117,6 +118,10 @@ public class ImageProcessor {
 		this.scale = scale;
 	}
 
+	public void setInterpolation(TexturePacker.InterpolationMode mode) {
+		interpolationMode = mode;
+	}
+
 	public Array<Rect> getImages () {
 		return rects;
 	}
@@ -165,7 +170,7 @@ public class ImageProcessor {
 			} else {
 				Graphics2D g = (Graphics2D)newImage.getGraphics();
 				g.setRenderingHint(RenderingHints.KEY_RENDERING, RenderingHints.VALUE_RENDER_QUALITY);
-				g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BICUBIC);
+				g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, interpolationMode.value);
 				g.drawImage(image, 0, 0, width, height, null);
 			}
 			image = newImage;
