@@ -1,0 +1,45 @@
+/*******************************************************************************
+ * Copyright 2011 See AUTHORS file.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ ******************************************************************************/
+
+package com.badlogic.gdx.tools.texturepacker;
+
+import java.io.File;
+
+public class TexturePackerUpscaleTest {
+
+	public static void main(String[] args) {
+		TexturePacker.Settings settings = new TexturePacker.Settings();
+		settings.scale = new float[] {4};
+		settings.interpolation = new TexturePacker.InterpolationMode[] {TexturePacker.InterpolationMode.Nearest};
+
+		TexturePacker packer = new TexturePacker(settings);
+		packer.addImage(new File("tests/gdx-tests-gwt/war/assets/data/bobrgb888-32x32.png"));
+
+		File out = new File("tmp/packout");
+
+		// Create or clean up packout directory
+		if (out.exists()) {
+			for (File f : out.listFiles()) {
+				f.delete();
+			}
+		} else {
+			out.mkdirs();
+		}
+
+		packer.pack(out, "main");
+	}
+
+}
